# retsurf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/actions/verify-version/: action.yml
.github/workflows/: build-android.yml  build-desktop.yml  build-linux-arm.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/retsurf/: RetsurfActivity.java
android/app/src/main/res/values/: strings.xml
android/scripts/: build.sh  sync-sdl.sh
app/: Cargo.toml
app/src/: app.rs  main.rs  render.rs  window.rs
app/src/input/: handler.rs  keyboard.rs  mod.rs
app/src/render/: sdl2.rs
docs/: ANDROID_PORT.md  BACKLOG.md  CONFIGURATION.md  HANDHELD_PORT.md  SERVO_PATCH.md
engine/: Cargo.toml
portmaster/: README.md  Retsurf.sh  port.json
portmaster/retsurf/: gameinfo.xml  port.json
portmaster/retsurf/licenses/: LICENSE
resources/: home.html  retsurf.desktop  retsurf.icns
src/: app.rs  bookmarks.rs  browser.rs  config.rs  dom.rs  egui_glow_sdl2.rs  egui_glue.rs  egui_sdl2.rs  history.rs  lib.rs  main.rs  menu.rs  osk.rs  prompt.rs  render.rs  resources.rs  ui.rs  window.rs
src/app/: command.rs  execute.rs  mod.rs  router.rs
src/browser/: adblock.rs  content_filter.rs  delegate.rs  engine.rs  home.rs  memory.rs  mod.rs  reader.rs  url.rs
src/config/: adblock.rs  bounds.rs  browser.rs  data_saving.rs  debug.rs  display.rs  downloads.rs  history.rs  input.rs  mod.rs  osk.rs  paths.rs  performance.rs  token_enum.rs  update.rs
src/data/: bookmarks.rs  dial.rs  history.rs  mod.rs
src/data/downloads/: mod.rs  store.rs  worker.rs
src/downloads/: mod.rs  worker.rs
src/event/: bindings.rs  gamepad.rs  handler.rs  keyboard.rs  mod.rs  mouse.rs  sdl2_keyboard_types.rs  sdl2_servo.rs  touch.rs  user.rs  window.rs
src/input/: gamepad.rs  handler.rs  keyboard.rs  mod.rs  mouse.rs  user.rs  window.rs
src/overlay/: dial_edit.rs  hints.rs  home.rs  menu.rs  mod.rs  osk.rs  prompt.rs  settings.rs
src/overlay/settings/: about.rs  controls.rs  fields.rs  mod.rs
src/platform/: mod.rs  render.rs  resources.rs  window.rs
src/ui/: dial_edit.rs  hints.rs  home.rs  memory.rs  menu.rs  mod.rs  osk.rs  prompt.rs  settings.rs  theme.rs  toolbar.rs
src/update/: github.rs  install.rs  mod.rs
tests/pages/: infinite-scroll-more.html  infinite-scroll.html  prompts.html  ua.html
