[package]
name = "retsurf"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]
license = "GPL-3.0"

[features]
default = ["webgl"]
# WebGL/WebGPU via a surfman connection. Disabled (`--no-default-features`) for the
# handheld build: surfman can't initialize on EGL 1.4 Mali blobs (Knulli/muOS/
# ROCKNIX) and the connection is unused there anyway, so skipping it avoids the
# probe entirely. See `src/render.rs::create_surfman_connection`.
webgl = []
sdl2-bundled = ["sdl2/bundled"]
sdl2-static-link = ["sdl2/static-link"]

# Release tuned for the handhelds: thin LTO across the (huge) Servo dependency
# graph plus a single codegen unit — most of fat LTO's win at a fraction of its
# link time/memory, which matters on the 4-core CI runner. `panic` stays at
# `unwind`: src/render.rs relies on catch_unwind to probe surfman on EGL 1.4
# devices, and `abort` would turn that probe into a process abort.
[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
rust-embed="8.7.2"
rustls = {version = "0.23.32", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
sdl2 = { version = "0.38.0", default-features = false, features = ["raw-window-handle"] }
raw-window-handle = "0.6.2"
gleam = "0.15"
glow = "0.17"
surfman = "0.12"
log = "0.4.28"
env_logger = "0.11.8"
servo = { version = "0.2", default-features = false, features = ["clipboard", "js_jit"] }
euclid = "0.22"
dpi = "0.1.2"
url = "2.5.7"
percent-encoding = "2.3"
# Matches the version servo-embedder-traits uses, so HeaderMap/StatusCode values
# we build for intercepted responses (the built-in start page) are the same type.
http = "1"
# Downloads are fetched by the embedder itself (Servo 0.2 has no download API).
# ureq is blocking (one thread per download) and bundles webpki roots, so TLS
# works on handhelds without a system CA store.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Ad blocking: Brave's engine (EasyList syntax), driven from Servo's
# load_web_resource hook. content-security-policy is already in Servo's tree —
# we only need its Destination enum to classify intercepted requests.
adblock = "0.12"
content-security-policy = "0.8"
keyboard-types = "0.8.1"
egui-sdl2 = { version = "0.3.1", default-features = false, features = ["glow-backend"] }
sdl2-keyboard-types = "0.1.0"

# Vendored servo-paint with the surfman connection made optional, so Servo runs
# on EGL 1.4 devices (Mali) where surfman can't create a connection. See
# vendor/servo-paint/paint.rs and docs/HANDHELD_PORT.md.
[patch.crates-io]
servo-paint = { path = "vendor/servo-paint" }
