[package]
name = "retsurf"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]
license = "GPL-3.0"

# `cdylib` is what SDL's Android shell loads at runtime as `libretsurf.so` (listed
# in RetsurfActivity.getLibraries()); `lib` keeps the crate linkable by the desktop
# `src/main.rs` binary and integration tests. Desktop builds are unaffected — the
# cdylib is just an extra artifact.
[lib]
name = "retsurf"
crate-type = ["lib", "cdylib"]

[features]
default = ["webgl"]
# WebGL/WebGPU via a surfman connection. Disabled (`--no-default-features`) for the
# handheld build: surfman can't initialize on EGL 1.4 Mali blobs (Knulli/muOS/
# ROCKNIX) and the connection is unused there anyway, so skipping it avoids the
# probe entirely. See `src/render.rs::create_surfman_connection`.
webgl = []
sdl2-bundled = ["sdl2/bundled"]
sdl2-static-link = ["sdl2/static-link"]

# Local release builds stay cheap to compile — Cargo's release defaults (no LTO,
# 16 codegen units) — so iterating with `cargo build --release` is fast. The
# slow, fully-optimized settings are CI-only, applied via CARGO_PROFILE_RELEASE_*
# env vars in .github/workflows/* (fat LTO + codegen-units = 1 everywhere, plus
# panic=abort for the webgl-off handheld build). To reproduce a CI-grade binary
# locally, export those same vars. Kept out of this shared profile so it doesn't
# also slow the desktop/Android/local builds.
#
# `panic = "abort"` is deliberately NOT here: it makes `catch_unwind` inert and
# would break the surfman EGL-1.4 probe (`platform/render.rs`) on webgl builds.
# The handheld CI build (webgl off) sets it via env var, where it's safe.
[profile.release]
# Cheap, build-uniform hardening (none of these slow compilation). `strip` is the
# real win: CI strips the Linux binary but local builds and the Android APK have
# no strip step, so the `.so`/binary ships with symbols → larger mmap, slower cold
# start. The other two are already the release defaults; pinning them explicitly
# keeps every build (local/CI/Android) identical.
strip = true
debug-assertions = false
overflow-checks = false

[dependencies]
rust-embed="8.7.2"
rustls = {version = "0.23.32", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
sdl2 = { version = "0.38.0", default-features = false }
gleam = "0.15"
glow = "0.17"
surfman = "0.13"
log = "0.4.28"
env_logger = "0.11.8"
servo = { version = "0.4", default-features = false, features = ["clipboard", "js_jit"] }
# Servo delivers its memory report (profile_traits::mem::MemoryReportResult) through
# servo_base's GenericCallback; we need that type to build the report callback. Pinned
# to the same 0.3 servo itself uses, so Cargo unifies on one version.
servo-base = "0.4"
# Build-fix pin for servo 0.4's pre-release crypto: servo pulls p256/p384/p521
# `=0.14.0-rc.14`, which need primeorder rc.14 — but `>=0.14.0-rc.14` also matches
# the released 0.14.0, whose `PrimeCurveParams` added a `WnafSize` bound the rc
# curves don't implement (won't compile). Pin primeorder to the rc so cargo can't
# pick the release. Drop once servo moves to the released RustCrypto 0.14 stack.
primeorder = "=0.14.0-rc.14"
euclid = "0.22"
dpi = "0.1.2"
url = "2.5.7"
percent-encoding = "2.3"
# Matches the version servo-embedder-traits uses, so HeaderMap/StatusCode values
# we build for intercepted responses (the built-in start page) are the same type.
http = "1"
# Downloads are fetched by the embedder itself (Servo 0.2 has no download API).
# ureq is blocking (one thread per download) and bundles webpki roots, so TLS
# works on handhelds without a system CA store.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Ad blocking: Brave's engine (EasyList syntax), driven from Servo's
# load_web_resource hook. content-security-policy is already in Servo's tree —
# we only need its Destination enum to classify intercepted requests.
adblock = "0.13"
content-security-policy = "0.8"
keyboard-types = "0.8.1"
egui-sdl2 = { version = "0.4.0", default-features = false, features = ["glow-backend"] }
sdl2-keyboard-types = "0.1.0"
# Decodes the bundled window-icon PNG at startup for SDL's set_icon. Pinned to the
# version already in the tree (pulled in via servo), so it adds no new resolve.
png = "0.18"

# Android: SDL loads our cdylib and calls the C `SDL_main` we export (needs the
# C ABI entry point (`std::os::raw` types); logs go to logcat via android_logger
# since there is no stderr to mirror to a file.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

# Vendored servo-paint with the surfman connection made optional, so Servo runs
# on EGL 1.4 devices (Mali) where surfman can't create a connection. See
# vendor/servo-paint/paint.rs and docs/HANDHELD_PORT.md.
[patch.crates-io]
servo-paint = { path = "vendor/servo-paint" }
