[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[dependencies]
engine = { path = "../engine" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.99"
sdl2 = { version = "0.38", default-features = false, features = ["unsafe_textures"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
gl = "0.14.0"
log = "0.4.27"
env_logger = "0.11.8"

[target.'cfg(target_os="macos")'.dependencies.sdl2]
features=["bundled", "static-link"]
version="0.38"
